Oct 18, 2019
  disease and chebi ontology tracks:
    generates only one file for all chromosomes
    DO terms that should processed must be in 'RGD_JBrowse_slim'
    uses merged-gene-descriptions if available
    fixed detection of obsolete ontology files
    added generation of disease/chebi tracks for chnonchilla, bonobo, squirrel, pig and dog

Oct 1, 2019
  AGR gff3 files:
    - gff3 fields 'ID:' and 'Parent:' are now set to RGD IDS for genes
    - 'protein_id' field set to protein RefSeq acc is emitted for protein coding transcripts
    - UniGene ids removed from emitted xdb ids

Sep 25, 2019
  genes module: added 'biological-region' to list of handled gene types (occurs for mouse genes)

Sep 24, 2019
  added gff3 generator for protein domains

ver 1.4.18, Jun 6, 2019
  gff3 for genes generator: optimized logging and parallelized code

ver 1.4.17, Mar 5, 2019
  JBrowse track loader: added track loading for RNAcentral

ver 1.4.16, Jan 31, 2019
  added loading of PIG tracks into JBrowse

ver 1.4.15, Jan 30, 2019
  added generation of gene tracks for PIG

ver 1.4.14, Jan 16, 2019
  jbrowse track loader: updated url for popup menu content (it is absolute now, instead of relative,
    to support JBrowse installation on the cloud)

ver 1.4.13, Nov 29, 2018
  ensembl prep module: added handling of scaffold assemblies like chinchilla

ver 1.4.12, Nov 21, 2018
  added a module to prepare Ensembl gff3 files for loading into JBrowse

ver 1.4.11, Nov 19, 2018
  AGR gff3 files: refactored generation of IDs, to produce smaller file

ver 1.4.10, Nov 15, 2018
  updated scripts to generate all files in directory /home/rgddata/pipelines/RGDGff3Pipeline/data;
  previously it was: /home/rgddata/pipelines/RGDGff3Pipeline/dist/log/RGDGFF3/Output

ver 1.4.9, Nov 14, 2018
  AGR gff3 files: for transcripts, added generation of 'biotype' attribute
  (to be used by Ensembl VEP tool: https://useast.ensembl.org/info/docs/tools/vep/script/vep_cache.html#gfftypes)

ver 1.4.8, Nov 6, 2018